--- a/Data-Science-Tarea-001.ipynb
+++ b/Data-Science-Tarea-001.ipynb
@@ -2,10 +2,571 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "####################################\n",
+    "#\n",
+    "# Tarea 1. BAses de datos\n",
+    "# Diplomado ITAM\n",
+    "# Profesor: Gerardo Durán\n",
+    "# Autor: José Alberto Pérez de Acha\n",
+    "#\n",
+    "####################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymysql\n",
+    "import sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passw = \"maquina271\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymysql.cursors import DictCursor\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Shipped',)\n",
+      "('Resolved',)\n",
+      "('Cancelled',)\n",
+      "('On Hold',)\n",
+      "('Disputed',)\n",
+      "('In Process',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EJERCICIO 1\n",
+    "# Realiza una consulta a la base de datos nabla_python por medio de pymysql: \n",
+    "# encuentra los tipos de status existentes dentro de la tabla orders.\n",
+    "\n",
+    "conn_1 = pymysql.connect(host=\"db4free.net\",\n",
+    "                       user=\"nabla123\",\n",
+    "                       port=3306,\n",
+    "                       password=passw,\n",
+    "                       database=\"nabla_python\",\n",
+    "                       charset=\"utf8\")\n",
+    "\n",
+    "query=\"\"\"\n",
+    "SELECT DISTINCT status\n",
+    "FROM orders;\n",
+    "\"\"\"\n",
+    "with conn_1.cursor() as cursor:\n",
+    "    cursor.execute(query)\n",
+    "    orders_status = cursor.fetchall()\n",
+    "\n",
+    "for status in orders_status:\n",
+    "    print(status)\n",
+    "\n",
+    "conn_1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Euro+ Shopping Channel', Decimal('715738.98')]\n",
+      "['Mini Gifts Distributors Ltd.', Decimal('584188.24')]\n",
+      "['Australian Collectors, Co.', Decimal('180585.07')]\n",
+      "['Muscle Machine Inc', Decimal('177913.95')]\n",
+      "['Dragon Souveniers, Ltd.', Decimal('156251.03')]\n",
+      "['Down Under Souveniers, Inc', Decimal('154622.08')]\n",
+      "['AV Stores, Co.', Decimal('148410.09')]\n",
+      "[\"Anna's Decorations, Ltd\", Decimal('137034.22')]\n",
+      "['Corporate Gift Ideas Co.', Decimal('132340.78')]\n",
+      "['Saveley & Henriot, Co.', Decimal('130305.35')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EJERCICIO 2\n",
+    "# Realiza una consulta a la base de datos nabla_python por medio de pymysql: \n",
+    "# encuentra los 10 clientes customerName que más han comprado en la tienda. \n",
+    "# La tabla resultante deberá estar ordenada de mayor a menor con customerName y expenses \n",
+    "# como la columna en dónde se encuentre el monto gastado en la tienda. (hint: considera las tablas customers y payments)\n",
+    "\n",
+    "\n",
+    "conn_1 = pymysql.connect(host=\"db4free.net\",\n",
+    "                       user=\"nabla123\",\n",
+    "                       port=3306,\n",
+    "                       password=passw,\n",
+    "                       database=\"nabla_python\",\n",
+    "                       charset=\"utf8\")\n",
+    "\n",
+    "query=\"\"\"\n",
+    "select c.customername, SUM(amount)\n",
+    "from customers c, payments o\n",
+    "where c.customernumber = o.customernumber\n",
+    "group by c.customername\n",
+    "order by 2 desc\n",
+    "limit 10;\n",
+    "\"\"\"\n",
+    "with conn_1.cursor() as cursor:\n",
+    "    cursor.execute(query)\n",
+    "    customer_name = cursor.fetchall()\n",
+    "\n",
+    "for name in customer_name:\n",
+    "    print(list(name))\n",
+    "\n",
+    "conn_1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[141, 'S18_3232', 8]\n",
+      "[141, 'S24_1444', 6]\n",
+      "[141, 'S24_2840', 6]\n",
+      "[141, 'S18_2319', 5]\n",
+      "[141, 'S24_4048', 5]\n",
+      "[141, 'S32_2509', 5]\n",
+      "[141, 'S50_1392', 5]\n",
+      "[124, 'S18_4668', 4]\n",
+      "[124, 'S12_1108', 4]\n",
+      "[124, 'S12_3891', 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EJERCICIO 3\n",
+    "# Escribe una consulta que, para cada producto comprado muestre la clave del cliente customerNumber y \n",
+    "# el código del producto productCode. Obten los primeros 10 valores\n",
+    "\n",
+    "conn_1 = pymysql.connect(host=\"db4free.net\",\n",
+    "                       user=\"nabla123\",\n",
+    "                       port=3306,\n",
+    "                       password=passw,\n",
+    "                       database=\"nabla_python\",\n",
+    "                       charset=\"utf8\")\n",
+    "\n",
+    "query=\"\"\"\n",
+    "select o.customernumber, d.productcode, COUNT(d.productcode)\n",
+    "from orders o, orderdetails d\n",
+    "where o.ordernumber = d.ordernumber\n",
+    "group by o.customernumber, d.productcode\n",
+    "order by 3 desc;\n",
+    "\"\"\"\n",
+    "with conn_1.cursor() as cursor:\n",
+    "    cursor.execute(query)\n",
+    "    orders = cursor.fetchmany(10)\n",
+    "\n",
+    "for product in orders:\n",
+    "    print(list(product))\n",
+    "\n",
+    "conn_1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[141, '1992 Ferrari 360 Spider red', Decimal('8')]\n",
+      "[141, '1970 Dodge Coronet', Decimal('6')]\n",
+      "[141, '1958 Chevy Corvette Limited Edition', Decimal('6')]\n",
+      "[141, '1964 Mercedes Tour Bus', Decimal('5')]\n",
+      "[141, '1992 Porsche Cayenne Turbo Silver', Decimal('5')]\n",
+      "[141, '1954 Greyhound Scenicruiser', Decimal('5')]\n",
+      "[141, 'Diamond T620 Semi-Skirted Tanker', Decimal('5')]\n",
+      "[124, '2001 Ferrari Enzo', Decimal('4')]\n",
+      "[124, '1969 Ford Falcon', Decimal('4')]\n",
+      "[124, '1957 Chevy Pickup', Decimal('4')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EJERCICIO 4\n",
+    "# En base al ejercicio anterior, reemplaza productCode por productName. \n",
+    "# HINT: El comando WITH nos ayuda a crear una tabla temporal:\n",
+    "\n",
+    "conn_1 = pymysql.connect(host=\"db4free.net\",\n",
+    "                       user=\"nabla123\",\n",
+    "                       port=3306,\n",
+    "                       password=passw,\n",
+    "                       database=\"nabla_python\",\n",
+    "                       charset=\"utf8\")\n",
+    "\n",
+    "query=\"\"\"\n",
+    "with tabla as (\n",
+    "select o.customernumber, d.productcode, COUNT(d.productcode) as cantidad\n",
+    "from orders o, orderdetails d\n",
+    "where o.ordernumber = d.ordernumber\n",
+    "group by o.customernumber, d.productcode\n",
+    "order by 3 desc)\n",
+    "select t.customernumber, p.productname, sum(t.cantidad)\n",
+    "from products p\n",
+    "join tabla t\n",
+    "on t.productcode = p.productcode\n",
+    "group by t.customernumber, p.productname\n",
+    "order by 3 desc;\n",
+    "\"\"\"\n",
+    "with conn_1.cursor() as cursor:\n",
+    "    cursor.execute(query)\n",
+    "    orders = cursor.fetchmany(10)\n",
+    "\n",
+    "for product in orders:\n",
+    "    print(list(product))\n",
+    "\n",
+    "conn_1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Euro+ Shopping Channel', '1992 Ferrari 360 Spider red', Decimal('8')]\n",
+      "['Euro+ Shopping Channel', '1970 Dodge Coronet', Decimal('6')]\n",
+      "['Euro+ Shopping Channel', '1958 Chevy Corvette Limited Edition', Decimal('6')]\n",
+      "['Euro+ Shopping Channel', '1964 Mercedes Tour Bus', Decimal('5')]\n",
+      "['Euro+ Shopping Channel', '1992 Porsche Cayenne Turbo Silver', Decimal('5')]\n",
+      "['Euro+ Shopping Channel', '1954 Greyhound Scenicruiser', Decimal('5')]\n",
+      "['Euro+ Shopping Channel', 'Diamond T620 Semi-Skirted Tanker', Decimal('5')]\n",
+      "['Mini Gifts Distributors Ltd.', '2001 Ferrari Enzo', Decimal('4')]\n",
+      "['Mini Gifts Distributors Ltd.', '1969 Ford Falcon', Decimal('4')]\n",
+      "['Mini Gifts Distributors Ltd.', '1957 Chevy Pickup', Decimal('4')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EJERCICIO 5\n",
+    "# En base al ejercicio anterior, reemplaza customerNumber por customerName:\n",
+    "\n",
+    "conn_1 = pymysql.connect(host=\"db4free.net\",\n",
+    "                       user=\"nabla123\",\n",
+    "                       port=3306,\n",
+    "                       password=passw,\n",
+    "                       database=\"nabla_python\",\n",
+    "                       charset=\"utf8\")\n",
+    "\n",
+    "query=\"\"\"\n",
+    "with tabla as (\n",
+    "select c.customername, d.productcode, COUNT(d.productcode) as cantidad\n",
+    "from orders o, orderdetails d, customers c\n",
+    "where c.customernumber = o.customernumber AND o.ordernumber = d.ordernumber\n",
+    "group by c.customername, d.productcode\n",
+    "order by 3 desc)\n",
+    "select t.customername, p.productname, sum(t.cantidad)\n",
+    "from products p\n",
+    "join tabla t\n",
+    "on t.productcode = p.productcode\n",
+    "group by t.customername, p.productname\n",
+    "order by 3 desc;\n",
+    "\"\"\"\n",
+    "with conn_1.cursor() as cursor:\n",
+    "    cursor.execute(query)\n",
+    "    orders = cursor.fetchmany(10)\n",
+    "\n",
+    "for product in orders:\n",
+    "    print(list(product))\n",
+    "\n",
+    "conn_1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[141, '1992 Ferrari 360 Spider red', 8]\n",
+      "[141, '1970 Dodge Coronet', 6]\n",
+      "[141, '1958 Chevy Corvette Limited Edition', 6]\n",
+      "[141, '1964 Mercedes Tour Bus', 5]\n",
+      "[141, '1992 Porsche Cayenne Turbo Silver', 5]\n",
+      "[141, '1954 Greyhound Scenicruiser', 5]\n",
+      "[141, 'Diamond T620 Semi-Skirted Tanker', 5]\n",
+      "[124, '2001 Ferrari Enzo', 4]\n",
+      "[124, '1969 Ford Falcon', 4]\n",
+      "[141, '1957 Chevy Pickup', 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EJERCICIO 6\n",
+    "# En base al ejercicio anterior, reemplaza customerNumber por customerName\n",
+    "\n",
+    "conn_1 = pymysql.connect(host=\"db4free.net\",\n",
+    "                       user=\"nabla123\",\n",
+    "                       port=3306,\n",
+    "                       password=passw,\n",
+    "                       database=\"nabla_python\",\n",
+    "                       charset=\"utf8\")\n",
+    "\n",
+    "query=\"\"\"\n",
+    "select o.customernumber, p.productname, COUNT(d.productcode)\n",
+    "from orders o, orderdetails d, products p\n",
+    "where o.ordernumber = d.ordernumber AND p.productcode = d.productcode\n",
+    "group by o.customernumber, p.productname\n",
+    "order by 3 desc;\n",
+    "\"\"\"\n",
+    "with conn_1.cursor() as cursor:\n",
+    "    cursor.execute(query)\n",
+    "    orders = cursor.fetchmany(10)\n",
+    "\n",
+    "for product in orders:\n",
+    "    print(list(product))\n",
+    "\n",
+    "conn_1.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EJERCICIOS 7 y 8\n",
+    "# Por medio de SQLAlchemy, define la tabla orders definida dentro de nabla_python\n",
+    "\n",
+    "##################################################################################\n",
+    "# IMPORTANTE: Encontré una rutina que genera el código en SQLAlchemy.\n",
+    "# Se llama sqlacodegen\n",
+    "# URL: https://pypi.org/project/sqlacodegen/\n",
+    "# Se descarga el binario usando PIP y ejecuta de la siguiente forma: \n",
+    "#     sqlacodegen mysql+pymysql://nabla123:maquina271@db4free.net:3306/nabla_python > habla_python.sqlalchemy\n",
+    "##################################################################################\n",
+    "\n",
+    "# coding: utf-8\n",
+    "from sqlalchemy import Column, DECIMAL, Date, ForeignKey, Integer, SmallInteger, String, Text\n",
+    "from sqlalchemy.dialects.mysql import MEDIUMBLOB, MEDIUMTEXT\n",
+    "from sqlalchemy.orm import relationship\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "\n",
+    "Base = declarative_base()\n",
+    "metadata = Base.metadata\n",
+    "\n",
+    "\n",
+    "class Office(Base):\n",
+    "    __tablename__ = 'offices'\n",
+    "\n",
+    "    officeCode = Column(String(10), primary_key=True)\n",
+    "    city = Column(String(50), nullable=False)\n",
+    "    phone = Column(String(50), nullable=False)\n",
+    "    addressLine1 = Column(String(50), nullable=False)\n",
+    "    addressLine2 = Column(String(50))\n",
+    "    state = Column(String(50))\n",
+    "    country = Column(String(50), nullable=False)\n",
+    "    postalCode = Column(String(15), nullable=False)\n",
+    "    territory = Column(String(10), nullable=False)\n",
+    "\n",
+    "\n",
+    "class Productline(Base):\n",
+    "    __tablename__ = 'productlines'\n",
+    "\n",
+    "    productLine = Column(String(50), primary_key=True)\n",
+    "    textDescription = Column(String(4000))\n",
+    "    htmlDescription = Column(MEDIUMTEXT)\n",
+    "    image = Column(MEDIUMBLOB)\n",
+    "\n",
+    "\n",
+    "class Employee(Base):\n",
+    "    __tablename__ = 'employees'\n",
+    "\n",
+    "    employeeNumber = Column(Integer, primary_key=True)\n",
+    "    lastName = Column(String(50), nullable=False)\n",
+    "    firstName = Column(String(50), nullable=False)\n",
+    "    extension = Column(String(10), nullable=False)\n",
+    "    email = Column(String(100), nullable=False)\n",
+    "    officeCode = Column(ForeignKey('offices.officeCode'), nullable=False, index=True)\n",
+    "    reportsTo = Column(ForeignKey('employees.employeeNumber'), index=True)\n",
+    "    jobTitle = Column(String(50), nullable=False)\n",
+    "\n",
+    "    office = relationship('Office')\n",
+    "    parent = relationship('Employee', remote_side=[employeeNumber])\n",
+    "\n",
+    "\n",
+    "class Product(Base):\n",
+    "    __tablename__ = 'products'\n",
+    "\n",
+    "    productCode = Column(String(15), primary_key=True)\n",
+    "    productName = Column(String(70), nullable=False)\n",
+    "    productLine = Column(ForeignKey('productlines.productLine'), nullable=False, index=True)\n",
+    "    productScale = Column(String(10), nullable=False)\n",
+    "    productVendor = Column(String(50), nullable=False)\n",
+    "    productDescription = Column(Text, nullable=False)\n",
+    "    quantityInStock = Column(SmallInteger, nullable=False)\n",
+    "    buyPrice = Column(DECIMAL(10, 2), nullable=False)\n",
+    "    MSRP = Column(DECIMAL(10, 2), nullable=False)\n",
+    "\n",
+    "    productline = relationship('Productline')\n",
+    "\n",
+    "\n",
+    "class Customer(Base):\n",
+    "    __tablename__ = 'customers'\n",
+    "\n",
+    "    customerNumber = Column(Integer, primary_key=True)\n",
+    "    customerName = Column(String(50), nullable=False)\n",
+    "    contactLastName = Column(String(50), nullable=False)\n",
+    "    contactFirstName = Column(String(50), nullable=False)\n",
+    "    phone = Column(String(50), nullable=False)\n",
+    "    addressLine1 = Column(String(50), nullable=False)\n",
+    "    addressLine2 = Column(String(50))\n",
+    "    city = Column(String(50), nullable=False)\n",
+    "    state = Column(String(50))\n",
+    "    postalCode = Column(String(15))\n",
+    "    country = Column(String(50), nullable=False)\n",
+    "    salesRepEmployeeNumber = Column(ForeignKey('employees.employeeNumber'), index=True)\n",
+    "    creditLimit = Column(DECIMAL(10, 2))\n",
+    "\n",
+    "    employee = relationship('Employee')\n",
+    "\n",
+    "\n",
+    "class Order(Base):\n",
+    "    __tablename__ = 'orders'\n",
+    "\n",
+    "    orderNumber = Column(Integer, primary_key=True)\n",
+    "    orderDate = Column(Date, nullable=False)\n",
+    "    requiredDate = Column(Date, nullable=False)\n",
+    "    shippedDate = Column(Date)\n",
+    "    status = Column(String(15), nullable=False)\n",
+    "    comments = Column(Text)\n",
+    "    customerNumber = Column(ForeignKey('customers.customerNumber'), nullable=False, index=True)\n",
+    "\n",
+    "    customer = relationship('Customer')\n",
+    "\n",
+    "\n",
+    "class Payment(Base):\n",
+    "    __tablename__ = 'payments'\n",
+    "\n",
+    "    customerNumber = Column(ForeignKey('customers.customerNumber'), primary_key=True, nullable=False)\n",
+    "    checkNumber = Column(String(50), primary_key=True, nullable=False)\n",
+    "    paymentDate = Column(Date, nullable=False)\n",
+    "    amount = Column(DECIMAL(10, 2), nullable=False)\n",
+    "\n",
+    "    customer = relationship('Customer')\n",
+    "\n",
+    "\n",
+    "class Orderdetail(Base):\n",
+    "    __tablename__ = 'orderdetails'\n",
+    "\n",
+    "    orderNumber = Column(ForeignKey('orders.orderNumber'), primary_key=True, nullable=False)\n",
+    "    productCode = Column(ForeignKey('products.productCode'), primary_key=True, nullable=False, index=True)\n",
+    "    quantityOrdered = Column(Integer, nullable=False)\n",
+    "    priceEach = Column(DECIMAL(10, 2), nullable=False)\n",
+    "    orderLineNumber = Column(SmallInteger, nullable=False)\n",
+    "\n",
+    "    order = relationship('Order')\n",
+    "    product = relationship('Product')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "engstr = \"mysql+pymysql://nabla123:maquina271@db4free.net:3306/nabla_python\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.orm import sessionmaker\n",
+    "\n",
+    "engine = create_engine(engstr)\n",
+    "Session = sessionmaker(bind=engine)\n",
+    "sess = Session()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn_2 = engine.connect()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shipped\n",
+      "Resolved\n",
+      "Cancelled\n",
+      "On Hold\n",
+      "Disputed\n",
+      "In Process\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "query = (sess.query(Order.status)\n",
+    "             .distinct(Order.status))\n",
+    "\n",
+    "for instance in query:\n",
+    "    print(instance.status)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn_2.close()\n"
+   ]
   }
  ],
  "metadata": {
