--- a/modulo3_trabajo_final.ipynb
+++ b/modulo3_trabajo_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "184"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "[106 rows x 4 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,74 +293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 186,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>categoria</th>\n",
-       "      <th>variacion</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>mantiene</td>\n",
-       "      <td>72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>incrementa</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>disminuye</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    categoria  variacion\n",
-       "2    mantiene         72\n",
-       "1  incrementa         18\n",
-       "0   disminuye         16"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "res = df_values.drop([\"texto\", \"url\", \"anio\"], axis=1).groupby(\"categoria\").count().reset_index().sort_values(\"variacion\", ascending=False)\n",
-    "res"
+    "archivo = 'comunicados-banxico.pkl'\n",
+    "df_values.to_pickle(archivo, protocol=4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +482,7 @@
        "[106 rows x 5 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +507,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>categoria</th>\n",
+       "      <th>variacion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mantiene</td>\n",
+       "      <td>72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>incrementa</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>disminuye</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    categoria  variacion\n",
+       "2    mantiene         72\n",
+       "1  incrementa         18\n",
+       "0   disminuye         16"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = df_values.drop([\"texto\", \"url\", \"anio\"], axis=1).groupby(\"categoria\").count().reset_index().sort_values(\"variacion\", ascending=False)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +796,7 @@
        "2020 disminuye           1"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +937,7 @@
        "[106 rows x 4 columns]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
